tests/errors/lex_string.java
public class lex_string {
	public static void main(String[] args) {
		char newline = '\n';

		// This is a comment
		System.out.println("Hello" + ' ' + "compiler! + newline);
	}
}
